# llvm-iskip

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  compile.sh  setup.sh
include/: BLReplacePass.h  BranchDuplicationPass.h  CallInsertionPass.h  CheckIdempotentPass.h  CustomRegisterAllocatorPass.h  HelloCodeGenPass.h  HelloPass.h  ITReplacePass.h  InstructionDuplicationPass.h  LSMUpdateReplacePass.h  LoadStoreVerificationPass.h  NopInsertionPass.h  PushPopReplacePass.h  t2B.inc  t2LDR.inc  t2STR.inc  tB.inc  tLDR.inc  tSTR.inc  util.h
lib/: BLReplacePass.cc  BranchDuplicationPass.cc  CMakeLists.txt  CallInsertionPass.cc  CheckIdempotentPass.cc  CustomRegisterAllocatorPass.cc  ITReplacePass.cc  InstructionDuplicationPass.cc  LSMUpdateReplacePass.cc  LoadStoreVerificationPass.cc  NopInsertionPass.cc  PushPopReplacePass.cc  main.cc  util.cc
patches/extra/: reg-alloc-import.diff
patches/llvm/: 0001-iskip-load-external-backend-passes-hooks.patch  0002-ARMConstantIslandPass-add-a-switch-for-CBZ-distance.patch
t/: empty-func.c  empty-func.ll  simple-add.ll
t/features/: clang-default-flags.feature  clang-opts-flags.feature  llc-add-duplication.feature  llc-default-flags.feature  llc-opts-flags.feature
t/features/step_definitions/: iskip-trans.rb
t/features/support/: env.rb
